# Bankruptcy-Prediction-using-Machine-learning-Techniques

./: .dockerignore  .gitignore  .slugignore  DEPLOYMENT.md  Dockerfile  ML Project Final.ipynb  MODEL_CARD.md  Procfile  README.md  main.py  pyproject.toml  render.yaml  requirements.txt  start.py  vercel.json
.github/workflows/: ci.yml
api/: index.py
app/: dashboard.html  dashboard.js  styles.css
data/: prediction_template.csv  sales_sample.csv
docs/: API.md  ARCHITECTURE.md  RUNBOOK.md  SECURITY.md
models/: bankruptcy_risk_pipeline.joblib  drift_baseline.json  model_metadata.json
reports/: model_report.csv  model_report.json
scripts/: predict.ps1  serve_dashboard.ps1  train.ps1  train_quick.ps1
src/bankruptcy_prediction/: __init__.py  audit.py  config.py  data.py  drift.py  explainability.py  generic_analyzer.py  inference.py  modeling.py  predict.py  reporting.py  serve.py  server.py  train.py  validation.py
tests/: test_data_contract.py  test_drift_contract.py  test_generic_analyzer.py  test_inference_contract.py  test_validation_contract.py
